--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <link rel="stylesheet" href="styles/8727a602.vendor.css"/>
-    <link rel="stylesheet" href="styles/8fa00220.main.css"/>
+    <link rel="stylesheet" href="public/styles/8727a602.vendor.css"/>
+    <link rel="stylesheet" href="public/styles/8fa00220.main.css"/>
   </head>
   <body ng-app="dugoutApp">
     <!--[if lt IE 7]>
@@ -28,8 +28,8 @@
     <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
 
-    <script src="scripts/eae6ccf4.vendor.js"></script>
+    <script src="public/scripts/eae6ccf4.vendor.js"></script>
 
-        <script src="scripts/eddb643b.scripts.js"></script>
+        <script src="public/scripts/eddb643b.scripts.js"></script>
 </body>
 </html>
